--- a/lib/stylesheets/stylesheet.css
+++ b/lib/stylesheets/stylesheet.css
@@ -1,3 +1,20 @@
+body {
+  padding-top: 70px;
+  background-color: #202124;
+}
+
+h4,
+h2 {
+  color: white;
+}
+
+a.anchor {
+  display: block;
+  position: relative;
+  top: -2150px;
+  visibility: hidden;
+}
+
 .card {
   background-color: white;
   width: 500px;
@@ -9,11 +26,6 @@
 }
 
 .primary-color {
-  color: white;
-}
-
-h4,
-h2 {
   color: white;
 }
 
@@ -39,10 +51,14 @@ h2 {
 
 .image-size-sm {
   width: 450px;
+  max-width: 100%;
+  max-height: 450px;
 }
 
 .image-size-lg {
-  width: 550px;
+  /* width: 550px; */
+  max-width: 100%;
+  max-height: 850px;
 }
 
 .padding-top-150 {
@@ -73,4 +89,12 @@ h2 {
 .text-italics {
   font-family: serif;
   font-style: italic;
+}
+
+.container-table {
+  display: table;
+}
+.vertical-center-row {
+  display: table-cell;
+  vertical-align: middle;
 }
