--- a/my-awesome-site/_includes/footer.html
+++ b/my-awesome-site/_includes/footer.html
@@ -1,4 +1,4 @@
-<footer class="page-footer font-small row-grey-alt pt-4 mt-4">
+<footer class="footer-color page-footer font-small row-grey-alt pt-4 mt-4">
 
   <!-- Footer Links -->
   <div class="container-fluid text-center text-md-left">
@@ -58,7 +58,7 @@
 </footer>
 <!-- Footer -->
 
-    <script src="lib/javascripts/helper.js"></script>
+    <script src="assets/javascripts/helper.js"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
