--- a/my-awesome-site/_includes/head.html
+++ b/my-awesome-site/_includes/head.html
@@ -3,7 +3,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1"><!-- Begin Jekyll SEO tag v2.5.0 -->
-<title>About | Your awesome title</title>
+<title>Thigpen Designs | Your awesome title</title>
 <meta name="generator" content="Jekyll v3.8.2" />
 <meta property="og:title" content="About" />
 <meta property="og:locale" content="en_US" />
@@ -18,5 +18,6 @@
 <link rel="stylesheet" href="/assets/main.css"><link type="application/atom+xml" rel="alternate" href="http://localhost:4000/feed.xml" title="Your awesome title" />
 <!-- Bootstrap CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<link rel="stylesheet" href="/assets/main.css">
 </head>
 <body>
