got internal pages working

--- a/my-awesome-site/_layouts/card.html
+++ b/my-awesome-site/_layouts/card.html
@@ -2,7 +2,7 @@
   <img class="card-img-top" src="assets/img/nuyu.jpg" alt="Card image cap">
   <div class="card-body">
     <h5 class="p-override-grey card-title">Card title</h5>
-    <p class="p-override-grey card-text">{{ content }}</p>
+    <p class="p-override-grey card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
     <a href="#" class="btn btn-primary">Go somewhere</a>
   </div>
 </div>
