--- a/my-awesome-site/_includes/footer.html
+++ b/my-awesome-site/_includes/footer.html
@@ -10,8 +10,8 @@
       <div class="col-md-6 mt-md-0 mt-3">
 
         <!-- Content -->
-        <h5 class="text-uppercase">Footer Content</h5>
-        <p>Contact Me here</p>
+        <h5 class="text-uppercase">Thigpen Designs</h5>
+        <p>I'm rather chatty online, feel free to contact me by using the links designated in the footer</p>
 
       </div>
       <!-- Grid column -->
@@ -26,16 +26,16 @@
 
         <ul class="list-unstyled">
           <li>
-            <a href="#!">Link 1111</a>
+            <a href="https://www.facebook.com/sthig">Facebook <i class="fab fa-facebook-f"></i></a>
           </li>
           <li>
-            <a href="#!">Link 2</a>
+            <a href="https://www.instagram.com/sthig/">Instagram <i class="fab fa-instagram"></i></a>
           </li>
           <li>
-            <a href="#!">Link 3</a>
+            <a href="mailto:scott.thigpen@gmail.com">eMail <i class="far fa-envelope-open"></i></a>
           </li>
           <li>
-            <a href="#!">Link 4</a>
+            <a href="https://github.com/sThig">GitHub <i class="fab fa-github-alt"></i></a>
           </li>
         </ul>
 
@@ -51,7 +51,7 @@
 
   <!-- Copyright -->
   <div class="footer-copyright text-center py-3">© 2018 Copyright:
-    <a href="#!"> ThigpenDesigns.com</a>
+    <a href="https://www.thigpendesigns.com"> ThigpenDesigns.com</a>
   </div>
   <!-- Copyright -->
 
