--- a/my-awesome-site/_includes/header-internal.html
+++ b/my-awesome-site/_includes/header-internal.html
@@ -1,7 +1,7 @@
 
 <nav class="navbar navbar-default fixed-top navbar-expand-lg navbar-light bg-light">
   <div class="container">
-    <a class="navbar-brand" href="#">Thigpen Designs Outer</a>
+    <a class="navbar-brand" href="index.html">Thigpen Designs Inner</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -9,19 +9,19 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="#home">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#about">About</a>
+          <a class="nav-link" href="about.html">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#illustration">Illustration</a>
+          <a class="nav-link" href="illustration.html">Illustration</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#uiux">UIUX</a>
+          <a class="nav-link" href="uiux.html">UIUX</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#code">Front End</a>
+          <a class="nav-link" href="code.html">Front End</a>
         </li>
 
       </ul>
