--- a/my-awesome-site/_layouts/template.html
+++ b/my-awesome-site/_layouts/template.html
@@ -1,5 +1,5 @@
 {%- include head.html -%}
-{%- include header.html -%}
+{%- include header-internal.html -%}
   <div class="d-flex flex-wrap flex-row justify-content-center">
     <div class="p-2">
       {%- include card.html -%}
