--- a/my-awesome-site/_includes/card.html
+++ b/my-awesome-site/_includes/card.html
@@ -1,8 +1,8 @@
 <div class="card" style="width: 18rem;">
-  <img class="card-img-top" src="assets/img/nuyu.jpg" alt="Card image cap">
+  <img class="card-img-top" src="assets/img/{{ include.image }}" alt="Card image cap">
   <div class="card-body">
-    <h5 class="p-override-grey card-title">Card title</h5>
-    <p class="p-override-grey card-text">{{ content }}</p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
+    <h5 class="p-override-grey card-title">{{ include.title }}</h5>
+    <p class="p-override-grey card-text">{{ include.content }}</p>
+    <a href="{{ include.link }}" class="btn btn-primary">{{ include.button }}</a>
   </div>
 </div>
