--- a/my-awesome-site/_layouts/home.html
+++ b/my-awesome-site/_layouts/home.html
@@ -37,8 +37,10 @@ layout: default
         <p class="primary-color">
           Attack the dog then pretend like nothing happened rub face on owner
 Eat the rubberband cat fur is the new black gnaw the corn cob annoy kitten brother with poking
-Cat ipsum dolor sit amet, lick master's hand at first then bite because im moody, curl into a furry donut destroy couch. Hide at bottom of staircase to trip human nap all day. Mewl for food at 4am steal the warm chair right after you get up. Run outside as soon as door open throw down all the stuff in the kitchen stand in doorway, unwilling to chose whether to stay in or go out so chase after silly colored fish toys around the house, paw at your fat belly or refuse to leave cardboard box. I'm bored inside, let me out i'm lonely outside, let me in i can't make up my mind whether to go in or out, guess i'll just stand partway in and partway out, contemplating the universe for half an hour how dare you nudge me with your foot?!?! leap into the air in greatest offense! scream at teh bath so fight an alligator and win head nudges so stretch. Roll on the floor purring your whiskers off sleep everywhere, but not in my bed for open the door, let me out, let me out, let me-out, let me-aow, let meaow, meaow! meow loudly just to annoy owners or licks your face, give attitude. Mewl for food at 4am. Floof tum, tickle bum, jellybean footies curly toes freak human out make funny noise mow mow mow mow mow mow success now attack human so meow in empty rooms, so stinky cat, and mark territory then cats take over the world. Ooh, are those your $250 dollar sandals? lemme use that as my litter box eat an easter feather as if it were a bird then burp victoriously, but tender and lie in the sink all day scratch leg; meow for can opener to feed me. Head nudges bathe private parts with tongue then lick owner's face but mewl for food at 4am, and scratch the box yet purr cat ass trophy.
-
+Cat ipsum dolor sit amet, lick master's hand at first then bite because im moody, curl into a furry donut destroy couch. Hide at bottom of staircase to trip human nap all day. Mewl for food at 4am steal the warm chair right after you get up. Run outside as soon as door open throw down all the stuff in the kitchen stand in doorway, unwilling to chose whether to stay in or go out so chase after silly colored fish toys around the house, paw at your fat belly or refuse to leave cardboard box. I'm bored inside, let me out i'm lonely outside, let me in i can't make up my mind whether to go in or out, guess i'll just stand partway in and partway out, contemplating the universe for half an hour how dare you nudge me with your foot?!?! leap into the air in greatest offense! scream at teh bath so fight an alligator and win head nudges so stretch. Roll on the floor purring your whiskers off sleep everywhere, but not in my bed for open the door, let me out, let me out, let me-out, let me-aow,
+        </p>
+        <p>
+          Learn more by clicking <a href="pages/about.html">here</a>.
         </p>
       </div>
     </div>
@@ -58,6 +60,9 @@ Cat ipsum dolor sit amet, lick master's hand at first then bite because im moody
           <p class="primary-color">
             Sleep kitty scratches couch bad kitty so paw at beetle and eat it before it gets away or thinking longingly about tuna brine.
           </p>
+          <p>
+            Learn more by clicking <a href="pages/illustration.html">here</a>.
+          </p>
         </div>
       </div>
       <div class="col-sm">
@@ -65,6 +70,9 @@ Cat ipsum dolor sit amet, lick master's hand at first then bite because im moody
         <h3 class="pt-3 primary-color">Web and Animation</h3>
         <p class="primary-color">
           Sleep kitty scratches couch bad kitty so paw at beetle and eat it before it gets away or thinking longingly about tuna brine.
+        </p>
+        <p>
+          Learn more by clicking <a href="pages/animation.html">here</a>.
         </p>
       </div>
     </div>
@@ -84,6 +92,9 @@ Cat ipsum dolor sit amet, lick master's hand at first then bite because im moody
           <p class="primary-color">
             Sleep kitty scratches couch bad kitty so paw at beetle and eat it before it gets away or thinking longingly about tuna brine.
           </p>
+          <p>
+            Learn more by clicking <a href="pages/ui.html">here</a>.
+          </p>
         </div>
       </div>
       <div class="col-sm">
@@ -91,6 +102,9 @@ Cat ipsum dolor sit amet, lick master's hand at first then bite because im moody
         <h3 class="pt-3 primary-color">User Experience</h3>
         <p class="primary-color">
           Sleep kitty scratches couch bad kitty so paw at beetle and eat it before it gets away or thinking longingly about tuna brine.
+        </p>
+        <p>
+          Learn more by clicking <a href="pages/ux.html">here</a>.
         </p>
       </div>
     </div>
@@ -109,6 +123,9 @@ Cat ipsum dolor sit amet, lick master's hand at first then bite because im moody
           <h3 class="pt-3 primary-color">Code Stuff</h3>
           <p class="primary-color">
             Sleep kitty scratches couch bad kitty so paw at beetle and eat it before it gets away or thinking longingly about tuna brine.
+          </p>
+          <p>
+            Learn more by clicking <a href="pages/code.html">here</a>.
           </p>
         </div>
       </div>
