--- a/my-awesome-site/_layouts/template.html
+++ b/my-awesome-site/_layouts/template.html
@@ -2,13 +2,13 @@
 {%- include header-internal.html -%}
   <div class="d-flex flex-wrap flex-row justify-content-center">
     <div class="p-2">
-      {%- include card.html -%}
+      {% include card.html content="My illustrations and things." title="Illustrations" button="press me hard" image="nuyu.jpg" link="pages/illustration.html" %}
     </div>
     <div class="p-2">
-      {%- include card.html -%}
+      {% include card.html content="My coding stuff." title="Front End Dev" button="press me hard" image="code.png" link="pages/code.html" %}
     </div>
     <div class="p-2">
-      {%- include card.html -%}
+      {% include card.html content="My animation stuff." title="Animation" button="press me hard" image="kedi.gif" link="pages/animation.html" %}
     </div>
 </div>
 
