addressed errors added color

--- a/my-awesome-site/_layouts/home.html
+++ b/my-awesome-site/_layouts/home.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="d-flex flex-column row-grey-height">
 
-  <div class="p-5 offset-100" id="home">
+  <div class="p-5 offset-100 section-hello fixed-height"  id="home">
     <div class="vertical-center-row">
 
       <div class="offset-100 row pt-5">
@@ -19,7 +19,7 @@ layout: default
       </div>
     </div>
   </div>
-  <div class="p-5" id="about">
+  <div class="p-5 section-about" id="about">
     <div class="row pt-5 offset-200">
       <h2 class="ml-2 pt-5">About Me</h2>
     </div>
@@ -45,7 +45,7 @@ Cat ipsum dolor sit amet, lick master's hand at first then bite because im moody
       </div>
     </div>
   </div>
-  <div class="p-5" id="illustration">
+  <div class="p-5 section-illo" id="illustration">
     <div class="row pt-5">
       <h2 class="ml-2 pt-5">Illustration</h2>
     </div>
@@ -77,7 +77,7 @@ Cat ipsum dolor sit amet, lick master's hand at first then bite because im moody
       </div>
     </div>
   </div>
-  <div class="p-5 offset-100" id="uiux">
+  <div class="p-5 offset-100 section-uiux" id="uiux">
     <div class="row">
       <h2 class="ml-2 pt-5">ui/ux</h2>
     </div>
@@ -109,7 +109,7 @@ Cat ipsum dolor sit amet, lick master's hand at first then bite because im moody
       </div>
     </div>
   </div>
-  <div class="p-5" id="code">
+  <div class="p-5 section-code" id="code">
     <div class="row offset-100">
       <h2 class="ml-2 pt-5">Front End Development</h2>
     </div>
