--- a/my-awesome-site/_includes/header-internal.html
+++ b/my-awesome-site/_includes/header-internal.html
@@ -1,6 +1,5 @@
 
 <nav class="navbar navbar-default fixed-top navbar-expand-lg navbar-light bg-light">
-  <div class="container">
     <a class="navbar-brand" href="../index.html">Thigpen Designs Inner</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -18,7 +17,10 @@
           <a class="nav-link" href="illustration.html">Illustration</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="uiux.html">UIUX</a>
+          <a class="nav-link" href="ux.html">UX</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="ui.html">Ui</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="code.html">Front End</a>
@@ -26,5 +28,4 @@
 
       </ul>
     </div>
-  </div>
 </nav>
