--- a/my-awesome-site/_includes/footer.html
+++ b/my-awesome-site/_includes/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer-color page-footer font-small row-grey-alt pt-4 mt-4">
+<footer class="footer-color page-footer font-small row-grey-alt pt-4 section-footer">
 
   <!-- Footer Links -->
   <div class="container-fluid text-center text-md-left">
