--- a/my-awesome-site/_layouts/default-internal.html
+++ b/my-awesome-site/_layouts/default-internal.html
@@ -3,11 +3,11 @@
 
   {%- include head.html -%}
 
-  <body>
+  <body class="section-body">
 
     {%- include header-internal.html -%}
 
-    <main class="page-content" aria-label="Content">
+    <main class="page-content p-5" aria-label="Content">
       <div class="wrapper container">
         {{ content }}
       </div>
