--- a/my-awesome-site/_layouts/home.html
+++ b/my-awesome-site/_layouts/home.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="d-flex flex-column row-grey-height">
 
-  <div class="p-5 offset-100 section-hello fixed-height"  id="home">
+  <div class="p-5 offset-100 section-hello fixed-height d-flex justify-content-center align-items-center"  id="home">
     <div class="vertical-center-row">
 
       <div class="offset-100 row pt-5">
@@ -19,64 +19,7 @@ layout: default
       </div>
     </div>
   </div>
-  <div class="p-5 section-about" id="about">
-    <div class="row pt-5 offset-200">
-      <h2 class="ml-2 pt-5">About Me</h2>
-    </div>
-    <div class="row">
-      <p class="ml-2 primary-color">I do a bunch of stuff</p>
-    </div>
-    <div class="row">
-      <div class="col-sm">
-        <div>
-          <img class="image-size-lg" src="assets/img/me.jpg" />
-        </div>
-      </div>
-      <div class="col-sm">
-        <h3 class="primary-color">I know things</h3>
-        <p class="primary-color">
-          Attack the dog then pretend like nothing happened rub face on owner
-Eat the rubberband cat fur is the new black gnaw the corn cob annoy kitten brother with poking
-Cat ipsum dolor sit amet, lick master's hand at first then bite because im moody, curl into a furry donut destroy couch. Hide at bottom of staircase to trip human nap all day. Mewl for food at 4am steal the warm chair right after you get up. Run outside as soon as door open throw down all the stuff in the kitchen stand in doorway, unwilling to chose whether to stay in or go out so chase after silly colored fish toys around the house, paw at your fat belly or refuse to leave cardboard box. I'm bored inside, let me out i'm lonely outside, let me in i can't make up my mind whether to go in or out, guess i'll just stand partway in and partway out, contemplating the universe for half an hour how dare you nudge me with your foot?!?! leap into the air in greatest offense! scream at teh bath so fight an alligator and win head nudges so stretch. Roll on the floor purring your whiskers off sleep everywhere, but not in my bed for open the door, let me out, let me out, let me-out, let me-aow,
-        </p>
-        <p>
-          Learn more by clicking <a href="pages/about.html">here</a>.
-        </p>
-      </div>
-    </div>
-  </div>
-  <div class="p-5 section-illo" id="illustration">
-    <div class="row pt-5">
-      <h2 class="ml-2 pt-5">Illustration</h2>
-    </div>
-    <div class="row">
-      <p class="ml-2 primary-color">Create intuitive and beautiful illustrations.</p>
-    </div>
-    <div class="row">
-      <div class="col-sm">
-        <div>
-          <img class="image-size-lg" src="assets/img/nuyu.jpg" />
-          <h3 class="pt-3 primary-color">Print Media</h3>
-          <p class="primary-color">
-            Sleep kitty scratches couch bad kitty so paw at beetle and eat it before it gets away or thinking longingly about tuna brine.
-          </p>
-          <p>
-            Learn more by clicking <a href="pages/illustration.html">here</a>.
-          </p>
-        </div>
-      </div>
-      <div class="col-sm">
-        <img class="image-size-sm" src="assets/img/kedi.gif" />
-        <h3 class="pt-3 primary-color">Web and Animation</h3>
-        <p class="primary-color">
-          Sleep kitty scratches couch bad kitty so paw at beetle and eat it before it gets away or thinking longingly about tuna brine.
-        </p>
-        <p>
-          Learn more by clicking <a href="pages/animation.html">here</a>.
-        </p>
-      </div>
-    </div>
-  </div>
+
   <div class="p-5 offset-100 section-uiux" id="uiux">
     <div class="row">
       <h2 class="ml-2 pt-5">ui/ux</h2>
@@ -109,6 +52,7 @@ Cat ipsum dolor sit amet, lick master's hand at first then bite because im moody
       </div>
     </div>
   </div>
+
   <div class="p-5 section-code" id="code">
     <div class="row offset-100">
       <h2 class="ml-2 pt-5">Front End Development</h2>
@@ -128,6 +72,67 @@ Cat ipsum dolor sit amet, lick master's hand at first then bite because im moody
             Learn more by clicking <a href="pages/code.html">here</a>.
           </p>
         </div>
+      </div>
+    </div>
+  </div>
+
+
+    <div class="p-5 section-illo" id="illustration">
+      <div class="row pt-5">
+        <h2 class="ml-2 pt-5">Illustration</h2>
+      </div>
+      <div class="row">
+        <p class="ml-2 primary-color">Create intuitive and beautiful illustrations.</p>
+      </div>
+      <div class="row">
+        <div class="col-sm">
+          <div>
+            <img class="image-size-lg" src="assets/img/nuyu.jpg" />
+            <h3 class="pt-3 primary-color">Print Media</h3>
+            <p class="primary-color">
+              Sleep kitty scratches couch bad kitty so paw at beetle and eat it before it gets away or thinking longingly about tuna brine.
+            </p>
+            <p>
+              Learn more by clicking <a href="pages/illustration.html">here</a>.
+            </p>
+          </div>
+        </div>
+        <div class="col-sm">
+          <img class="image-size-sm" src="assets/img/kedi.gif" />
+          <h3 class="pt-3 primary-color">Web and Animation</h3>
+          <p class="primary-color">
+            Sleep kitty scratches couch bad kitty so paw at beetle and eat it before it gets away or thinking longingly about tuna brine.
+          </p>
+          <p>
+            Learn more by clicking <a href="pages/animation.html">here</a>.
+          </p>
+        </div>
+      </div>
+    </div>
+
+  <div class="p-5 section-about" id="about">
+    <div class="row pt-5 offset-200">
+      <h2 class="ml-2 pt-5">About Me</h2>
+    </div>
+    <div class="row">
+      <p class="ml-2 primary-color">I do a bunch of stuff</p>
+    </div>
+    <div class="row">
+      <div class="col-sm">
+        <div>
+          <img class="image-size-lg" src="assets/img/me.jpg" />
+        </div>
+      </div>
+      <div class="col-sm">
+        <h3 class="primary-color">I know things</h3>
+        <p class="primary-color">
+          Attack the dog then pretend like nothing happened rub face on owner
+Eat the rubberband cat fur is the new black gnaw the corn cob annoy kitten brother with poking
+Cat ipsum dolor sit amet, lick master's hand at first then bite because im moody, curl into a furry donut destroy couch. Hide at bottom of staircase to trip human nap all day. Mewl for food at 4am steal the warm chair right after you get up. Run outside as soon as door open throw down all the stuff in the kitchen stand in doorway, unwilling to chose whether to stay in or go out so chase after silly colored fish toys around the house, paw at your fat belly or refuse to leave cardboard box. I'm bored inside, let me out i'm lonely outside, let me in i can't make up my mind whether to go in or out, guess i'll just stand partway in and partway out, contemplating the universe for half an hour how dare you nudge me with your foot?!?! leap into the air in greatest offense! scream at teh bath so fight an alligator and win head nudges so stretch. Roll on the floor purring your whiskers off sleep everywhere, but not in my bed for open the door, let me out, let me out, let me-out, let me-aow,
+        </p>
+        <p>
+          Learn more by clicking <a href="pages/about.html">here</a>.
+        </p>
       </div>
     </div>
   </div>
