--- a/my-awesome-site/_includes/header.html
+++ b/my-awesome-site/_includes/header.html
@@ -1,5 +1,5 @@
 
-<nav class="navbar navbar-default fixed-top navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-default fixed-top navbar-expand-lg section-nav">
   <div class="container">
     <a class="navbar-brand" href="#">Thigpen Designs Outer</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -9,19 +9,18 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="#home">Home <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#about">About</a>
+          <li class="nav-item">
+            <a class="nav-link" href="#uiux">UIUX</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#code">Front End</a>
+          </li>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#illustration">Illustration</a>
-        </li>
         <li class="nav-item">
-          <a class="nav-link" href="#uiux">UIUX</a>
+          <a class="nav-link" href="#about">About</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#code">Front End</a>
         </li>
 
       </ul>
