--- a/my-awesome-site/_sass/_layout.scss
+++ b/my-awesome-site/_sass/_layout.scss
@@ -20,28 +20,56 @@
 }
 
 /* RGB */
-$color1: rgba(246, 201, 103, 1);
-$color2: rgba(235, 97, 90, 1);
-$color3: rgba(210, 233, 125, 1);
-$color4: rgba(98, 206, 199, 1);
-$color5: rgba(62, 62, 62, 1);
+$color1: rgba(52, 60, 90, 1);
+$color2: rgba(212, 209, 203, 1);
+$color3: rgba(129, 128, 222, 1);
+$color4: rgba(136, 133, 162, 1);
+$color5: rgba(94, 103, 157, 1);
+$color6: rgba(118, 229, 224, 1);
+$color7: rgba(244, 152, 137, 1);
+$color10darken: darken($color1, 10%);
+$color20darken: darken($color1, 20%);
+$color30darken: darken($color1, 30%);
 
 .section-hello {
-  background: $color5;
+  background: $color20darken;
 }
 
-.section-illo {
-  background: $color2;
-}
+
 
 .section-uiux {
-  background: $color3;
+  background: $color10darken;
 }
 
 .section-code {
-  background: $color4;
+  background: $color20darken;
+}
+
+.section-illo {
+  background: $color10darken;
 }
 
 .section-about {
-  background: $color1;
+  background: $color20darken;
+}
+
+.section-nav {
+  background: $color30darken;
+}
+
+.section-footer {
+  background: $color30darken;
+}
+
+.section-body {
+  background: $color30darken;
+}
+
+.vertical-center-row {
+  text-align: center;
+}
+
+.page-content {
+  margin-top: 100px;
+  background-color: $color20darken;
 }
