--- a/my-awesome-site/_styleheets/_base.scss
+++ b/my-awesome-site/_styleheets/_base.scss
@@ -1,7 +1,6 @@
 // Body resets
 //
 // Update the foundational and global aspects of the page.
-@import 'layout';
 
 * {
   -webkit-box-sizing: border-box;
@@ -9,11 +8,12 @@
           box-sizing: border-box;
 }
 
-
 html,
 body {
   margin: 0;
- background: $color1;
+  margin-top: 70px;
+  // padding: 15px;
+  background: #202124;
 }
 
 html {
@@ -70,8 +70,4 @@ th {
 tbody tr:nth-child(odd) td,
 tbody tr:nth-child(odd) th {
   background-color: #f9f9f9;
-}
-
-.fixed-height {
-  height: 100vh;
 }
