updated internal, worked on scrolling and failed miserably. I'm a failure

--- a/my-awesome-site/_layouts/card.html
+++ b/my-awesome-site/_layouts/card.html
@@ -1,5 +1,5 @@
 <div class="card" style="width: 18rem;">
-  <img class="card-img-top" src="assets/img/{{ include.image }}" alt="Card image cap">
+  <img class="card-img-top" src="/assets/img/{{ include.image }}" alt="Card image cap">
   <div class="card-body">
     <h5 class="p-override-grey card-title">{{ include.title }}</h5>
     <p class="p-override-grey card-text">{{ include.content }}</p>
