--- a/my-awesome-site/_layouts/home.html
+++ b/my-awesome-site/_layouts/home.html
@@ -4,10 +4,21 @@ layout: default
 
 <div class="d-flex flex-column row-grey-height">
 
-  <div class="p-5 offset-100 section-hello fixed-height d-flex justify-content-center align-items-center"  id="home">
+  <div class="section-hello fixed-height d-flex justify-content-center align-items-center"  id="home">
     <div class="vertical-center-row">
+      <div class="homepage-hero-module">
+          <div class="video-container">
+              <div class="filter"></div>
+              <video autoplay loop class="fillWidth">
+                  <source src="/assets/video/Beetle-Nut-Trees.mp4" type="video/mp4" />Your browser does not support the video tag. I suggest you upgrade your browser.
+              </video>
+              <div class="poster hidden">
+                  <!-- <img src="PATH_TO_JPEG" alt=""> -->
+              </div>
+          </div>
+      </div>
 
-      <div class="offset-100 row pt-5">
+      <div class="row">
         <div class="col">
           <h4>Hi, I'm Scott Thigpen</h4>
         </div>
@@ -20,12 +31,12 @@ layout: default
     </div>
   </div>
 
-  <div class="p-5 offset-100 section-uiux" id="uiux">
-    <div class="row">
+  <div class="p-5 section-uiux" id="uiux">
+    <div class="row pt-5">
       <h2 class="ml-2 pt-5">ui/ux</h2>
     </div>
     <div class="row">
-      <p class="ml-2 primary-color">Throwing some empathy on ya</p>
+      <p class="ml-2 primary-color">111Throwing some empathy on ya</p>
     </div>
     <div class="row">
       <div class="col-sm">
@@ -53,8 +64,9 @@ layout: default
     </div>
   </div>
 
+
   <div class="p-5 section-code" id="code">
-    <div class="row offset-100">
+    <div class="row pt-5">
       <h2 class="ml-2 pt-5">Front End Development</h2>
     </div>
     <div class="row">
