--- a/my-awesome-site/_layouts/page-internal.html
+++ b/my-awesome-site/_layouts/page-internal.html
@@ -1,12 +1,11 @@
 ---
 layout: default-internal
 ---
-<div class="container">
+<div class="mt-5 container">
 
   <article class="post">
-
     <header class="post-header">
-      <h1 class="post-title">{{ page.title | escape }}</h1>
+      <h1 class="mpost-title">{{ page.title | escape }}</h1>
     </header>
 
     <div class="post-content">
