--- a/my-awesome-site/_sass/_type.scss
+++ b/my-awesome-site/_sass/_type.scss
@@ -1,7 +1,7 @@
 // Typography
 //
 // Headings, body text, lists, and other misc typographic elements.
-
+@import 'layout';
 // Headings
 h1, h2, h3, h4, h5, h6 {
   margin-bottom: .5rem;
@@ -21,7 +21,7 @@ h3 {
   margin-top: 1.5rem;
   font-size: 1.25rem;
 }
-h4, h5, h6 {
+h5, h6 {
   margin-top: 1rem;
   font-size: 1rem;
 }
@@ -97,7 +97,7 @@ blockquote p:last-child {
 }
 
 .color-yellow {
-  color: yellow;
+  color: $color6;
 }
 
 .p-override-grey {
