--- a/my-awesome-site/_includes/header.html
+++ b/my-awesome-site/_includes/header.html
@@ -1,7 +1,7 @@
 
 <nav class="navbar navbar-default fixed-top navbar-expand-lg section-nav">
   <div class="container">
-    <a class="navbar-brand" href="#">Thigpen Designs Outer</a>
+    <a class="navbar-brand" href="#home">Thigpen Designs</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
