justin to the rescue on the scroll issue

--- a/my-awesome-site/_sass/_base.scss
+++ b/my-awesome-site/_sass/_base.scss
@@ -126,6 +126,7 @@ tbody tr:nth-child(odd) th {
     z-index: 0;
     bottom: 0;
 }
+//adding test post
 .video-container video.fillWidth {
     width: 100%;
-}  
+}
