got coverr working

--- a/my-awesome-site/_layouts/home.html
+++ b/my-awesome-site/_layouts/home.html
@@ -2,21 +2,20 @@
 layout: default
 ---
 
+<div class="homepage-hero-module">
+  <div class="video-container">
+    <div class="filter"></div>
+    <video autoplay loop class="fillWidth">
+      <source src="/assets/video/For-Ems.mp4" type="video/mp4" />Your browser does not support the video tag. I suggest you upgrade your browser.
+    </video>
+    <div class="poster hidden">
+      <!-- <img src="PATH_TO_JPEG" alt=""> -->
+    </div>
+  </div>
+</div>
 <div class="d-flex flex-column row-grey-height">
-
   <div class="section-hello fixed-height d-flex justify-content-center align-items-center"  id="home">
     <div class="vertical-center-row">
-      <div class="homepage-hero-module">
-          <div class="video-container">
-              <div class="filter"></div>
-              <video autoplay loop class="fillWidth">
-                  <source src="/assets/video/Beetle-Nut-Trees.mp4" type="video/mp4" />Your browser does not support the video tag. I suggest you upgrade your browser.
-              </video>
-              <div class="poster hidden">
-                  <!-- <img src="PATH_TO_JPEG" alt=""> -->
-              </div>
-          </div>
-      </div>
 
       <div class="row">
         <div class="col">
