--- a/my-awesome-site/_layouts/home.html
+++ b/my-awesome-site/_layouts/home.html
@@ -2,19 +2,9 @@
 layout: default
 ---
 
-<div class="homepage-hero-module">
-  <div class="video-container">
-    <div class="filter"></div>
-    <video autoplay loop class="fillWidth">
-      <source src="/assets/video/For-Ems.mp4" type="video/mp4" />Your browser does not support the video tag. I suggest you upgrade your browser.
-    </video>
-    <div class="poster hidden">
-      <!-- <img src="PATH_TO_JPEG" alt=""> -->
-    </div>
-  </div>
-</div>
 <div class="d-flex flex-column row-grey-height">
-  <div class="section-hello fixed-height d-flex justify-content-center align-items-center"  id="home">
+
+  <div class="section-hello fixed-height fill d-flex justify-content-center align-items-center"  id="home">
     <div class="vertical-center-row">
 
       <div class="row">
@@ -31,56 +21,55 @@ layout: default
   </div>
 
   <div class="p-5 section-uiux" id="uiux">
-    <div class="row pt-5">
-      <h2 class="ml-2 pt-5">ui/ux</h2>
+    <div class="row">
+      <h2 class="ml-2">ui/ux</h2>
     </div>
     <div class="row">
-      <p class="ml-2 primary-color">111Throwing some empathy on ya</p>
+      <p class="ml-2 primary-color">I make notes on cocktail napkins and turn them into pixel perfect designs with empathy for both the user and developer.</p>
     </div>
     <div class="row">
       <div class="col-sm">
         <div>
-          <img class="image-size-lg" src="assets/img/testitout.png" />
-          <h3 class="pt-3 primary-color">User Interface</h3>
+          <h3 class="pt-3 primary-color">User Experience</h3>
           <p class="primary-color">
-            Sleep kitty scratches couch bad kitty so paw at beetle and eat it before it gets away or thinking longingly about tuna brine.
+            "Empathy for the user" is my motto when it comes to making sure they have a good experience with a website or app.  I work meticulously to make sure all areas of an app and edge cases are addressed.
           </p>
           <p>
             Learn more by clicking <a href="pages/ui.html">here</a>.
           </p>
+          <img class="image-size-lg" src="assets/img/iterations.png" />
         </div>
       </div>
       <div class="col-sm">
-        <img class="image-size-sm" src="assets/img/iterations.png" />
-        <h3 class="pt-3 primary-color">User Experience</h3>
+        <h3 class="pt-3 primary-color">User Interface</h3>
         <p class="primary-color">
-          Sleep kitty scratches couch bad kitty so paw at beetle and eat it before it gets away or thinking longingly about tuna brine.
+          Pixel perfect designs are not just for looks but allows the development team to know exactly how a feature, app or website is supposd to look like and work.  I aim to make each design look exaclty like what the user would see.
         </p>
         <p>
           Learn more by clicking <a href="pages/ux.html">here</a>.
         </p>
+        <img class="image-size-sm" src="assets/img/testitout.png" />
       </div>
     </div>
   </div>
 
 
   <div class="p-5 section-code" id="code">
-    <div class="row pt-5">
-      <h2 class="ml-2 pt-5">Front End Development</h2>
+    <div class="row">
+      <h2 class="ml-2">Front End Development</h2>
     </div>
     <div class="row">
-      <p class="ml-2 primary-color">I know Javascript</p>
+      <p class="ml-2 primary-color">I'm like Mark Haml on board the ES6 spaceship SASSing everyone</p>
     </div>
     <div class="row">
       <div class="col-sm">
         <div>
-          <img class="image-size-lg" src="assets/img/code.png" />
-          <h3 class="pt-3 primary-color">Code Stuff</h3>
           <p class="primary-color">
-            Sleep kitty scratches couch bad kitty so paw at beetle and eat it before it gets away or thinking longingly about tuna brine.
+            In addition to being a designer I am well versed in front end coding being able to develop my own designs into full blown code for websites.  This includes not only knowing HTML, CSS and Javascript but also knowing HAML, React, SASS, HTML5 and Boostrap.
           </p>
           <p>
             Learn more by clicking <a href="pages/code.html">here</a>.
+          <img class="image-size-lg" src="assets/img/code.png" />
           </p>
         </div>
       </div>
@@ -89,11 +78,11 @@ layout: default
 
 
     <div class="p-5 section-illo" id="illustration">
-      <div class="row pt-5">
-        <h2 class="ml-2 pt-5">Illustration</h2>
+      <div class="row">
+        <h2 class="ml-2">Illustration</h2>
       </div>
       <div class="row">
-        <p class="ml-2 primary-color">Create intuitive and beautiful illustrations.</p>
+        <p class="ml-2 primary-color">One image for one thousand words</p>
       </div>
       <div class="row">
         <div class="col-sm">
@@ -126,7 +115,7 @@ layout: default
       <h2 class="ml-2 pt-5">About Me</h2>
     </div>
     <div class="row">
-      <p class="ml-2 primary-color">I do a bunch of stuff</p>
+      <p class="ml-2 primary-color">Jack of all trades, master of a few of them.</p>
     </div>
     <div class="row">
       <div class="col-sm">
@@ -135,11 +124,12 @@ layout: default
         </div>
       </div>
       <div class="col-sm">
-        <h3 class="primary-color">I know things</h3>
+        <h3 class="primary-color">Howdy y'all</h3>
         <p class="primary-color">
-          Attack the dog then pretend like nothing happened rub face on owner
-Eat the rubberband cat fur is the new black gnaw the corn cob annoy kitten brother with poking
-Cat ipsum dolor sit amet, lick master's hand at first then bite because im moody, curl into a furry donut destroy couch. Hide at bottom of staircase to trip human nap all day. Mewl for food at 4am steal the warm chair right after you get up. Run outside as soon as door open throw down all the stuff in the kitchen stand in doorway, unwilling to chose whether to stay in or go out so chase after silly colored fish toys around the house, paw at your fat belly or refuse to leave cardboard box. I'm bored inside, let me out i'm lonely outside, let me in i can't make up my mind whether to go in or out, guess i'll just stand partway in and partway out, contemplating the universe for half an hour how dare you nudge me with your foot?!?! leap into the air in greatest offense! scream at teh bath so fight an alligator and win head nudges so stretch. Roll on the floor purring your whiskers off sleep everywhere, but not in my bed for open the door, let me out, let me out, let me-out, let me-aow,
+          For over twenty years I've been a professional in the creative industry.  I've illustrated for the Wall Street Journal, animated for Dreamworks, worked a successful startup as a Front End Developer/ UIUX Designer and raced across the country in the tougest mountain bike race in the world.
+        </p>
+        <p>
+          Also I love my dog, Tess.
         </p>
         <p>
           Learn more by clicking <a href="pages/about.html">here</a>.
