added rounded circle on avatar

--- a/my-awesome-site/_layouts/home.html
+++ b/my-awesome-site/_layouts/home.html
@@ -118,14 +118,15 @@ layout: default
       <p class="ml-2 primary-color">Jack of all trades, master of a few of them.</p>
     </div>
     <div class="row">
-      <div class="col-sm">
-        <div>
-          <img class="image-size-lg" src="assets/img/me.jpg" />
+      <div class="col d-flex flex-row">
+        <div class="col-md-3">
+
+          <img class="img-circle" src="assets/img/me.jpg" />
         </div>
-      </div>
-      <div class="col-sm">
-        <h3 class="primary-color">Howdy y'all</h3>
-        <p class="primary-color">
+        <div class="col-md-3">
+
+          <h3 class="primary-color">Howdy y'all</h3>
+          <p class="primary-color">
           For over twenty years I've been a professional in the creative industry.  I've illustrated for the Wall Street Journal, animated for Dreamworks, worked a successful startup as a Front End Developer/ UIUX Designer and raced across the country in the tougest mountain bike race in the world.
         </p>
         <p>
@@ -134,6 +135,7 @@ layout: default
         <p>
           Learn more by clicking <a href="pages/about.html">here</a>.
         </p>
+      </div>
       </div>
     </div>
   </div>
