--- a/my-awesome-site/_sass/_base.scss
+++ b/my-awesome-site/_sass/_base.scss
@@ -55,6 +55,11 @@ img {
   border-radius: 5px;
 }
 
+.img-circle {
+  width: 50%;
+  border-radius: 50%;
+}
+
 // Tables
 table {
   margin-bottom: 1rem;
