--- a/my-awesome-site/_includes/header-internal.html
+++ b/my-awesome-site/_includes/header-internal.html
@@ -11,19 +11,19 @@
           <a class="nav-link" href="../index.html">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="about.html">About</a>
+          <a class="nav-link" href="pages/about.html">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="illustration.html">Illustration</a>
+          <a class="nav-link" href="/pages/illustration.html">Illustration</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="ux.html">UX</a>
+          <a class="nav-link" href="/pages/ux.html">UX</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="ui.html">Ui</a>
+          <a class="nav-link" href="/pages/ui.html">Ui</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="code.html">Front End</a>
+          <a class="nav-link" href="/pages/code.html">Front End</a>
         </li>
 
       </ul>
