fixed small circled images

--- a/my-awesome-site/_layouts/home.html
+++ b/my-awesome-site/_layouts/home.html
@@ -37,7 +37,7 @@ layout: default
           <p>
             Learn more by clicking <a href="pages/ui.html">here</a>.
           </p>
-          <img class="image-size-lg" src="assets/img/iterations.png" />
+          <img class="img-circle" src="assets/img/iterations.png" />
         </div>
       </div>
       <div class="col-sm">
@@ -48,13 +48,13 @@ layout: default
         <p>
           Learn more by clicking <a href="pages/ux.html">here</a>.
         </p>
-        <img class="image-size-sm" src="assets/img/testitout.png" />
+        <img class="img-circle" src="assets/img/testitout.png" />
       </div>
     </div>
   </div>
 
 
-  <div class="p-5 section-code" id="code">
+  <div class="p-5 section-code d-flex justify-content-center flex-wrap " id="code">
     <div class="row">
       <h2 class="ml-2">Front End Development</h2>
     </div>
@@ -63,13 +63,18 @@ layout: default
     </div>
     <div class="row">
       <div class="col-sm">
-        <div>
-          <p class="primary-color">
-            In addition to being a designer I am well versed in front end coding being able to develop my own designs into full blown code for websites.  This includes not only knowing HTML, CSS and Javascript but also knowing HAML, React, SASS, HTML5 and Boostrap.
-          </p>
-          <p>
-            Learn more by clicking <a href="pages/code.html">here</a>.
-          <img class="image-size-lg" src="assets/img/code.png" />
+        <div class="col d-flex flex-row">
+          <div class="col-sm-1">
+            <img class="img-circle img-size-small" src="assets/img/code.png" />
+          </div>
+          <div  class="col-sm-6">
+
+            <p class="primary-color">
+              In addition to being a designer I am well versed in front end coding being able to develop my own designs into full blown code for websites.  This includes not only knowing HTML, CSS and Javascript but also knowing HAML, React, SASS, HTML5 and Boostrap.
+            </p>
+            <p>
+              Learn more by clicking <a href="pages/code.html">here</a>.
+          </div>
           </p>
         </div>
       </div>
@@ -87,7 +92,7 @@ layout: default
       <div class="row">
         <div class="col-sm">
           <div>
-            <img class="image-size-lg" src="assets/img/nuyu.jpg" />
+            <img class="img-circle" src="assets/img/nuyu.jpg" />
             <h3 class="pt-3 primary-color">Print Media</h3>
             <p class="primary-color">
               Sleep kitty scratches couch bad kitty so paw at beetle and eat it before it gets away or thinking longingly about tuna brine.
@@ -98,7 +103,7 @@ layout: default
           </div>
         </div>
         <div class="col-sm">
-          <img class="image-size-sm" src="assets/img/kedi.gif" />
+          <img class="img-circle" src="assets/img/kedi.gif" />
           <h3 class="pt-3 primary-color">Web and Animation</h3>
           <p class="primary-color">
             Sleep kitty scratches couch bad kitty so paw at beetle and eat it before it gets away or thinking longingly about tuna brine.
