--- a/my-awesome-site/_sass/_layout.scss
+++ b/my-awesome-site/_sass/_layout.scss
@@ -85,6 +85,10 @@ $color30darken: darken($color1, 30%);
     background-position: 50% 50%;
 }​
 
+.img-size-small {
+  width: 75px;
+}
+
 
 .anchor {
   a.anchor {
