--- a/my-awesome-site/_layouts/page-internal.html
+++ b/my-awesome-site/_layouts/page-internal.html
@@ -13,4 +13,14 @@ layout: default-internal
     </div>
 
   </article>
+
+  <div class="mt-5">
+    <ul class="mt-5">
+{% for post in site.posts %}
+  <li>
+    <a href="{{ post.url }}">{{ post.title }}</a>
+  </li>
+{% endfor %}
+</ul>
+  </div>
 </div>
